fixed flex layout issues and added headers to box items

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a {
     }
 }
 
-img {
+#kelsie-szost {
     display: flex;
     margin-left: 300px;
 }
@@ -91,38 +91,65 @@ img {
     line-height: 25px;
 }
 
-/* bottom three boxes*/
+/*Work Section*/
+
+#website-work-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.website-work-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.xibitz-image {
+display: flex;
+}
+
+.website-work-header {
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+.website-work-paragraph {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 70%;
+    font-weight: 200;
+}
+
+/*bottom two boxes*/
 
 #boxes-container {
-    max-width: 1400px;
-    margin: 10px auto 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .boxes {
-    flex-basis: 30%;
-    box-sizing: border-box;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     margin: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+
 }
 
-@media (min-width: 900px) {
-    #boxes-container {
-        display: flex;
-        justify-content: space-between;  
-    }
+.apps-image {
+    display: flex;
+    justify-content: flex-start;
 }
 
-.box-one {
-    background-color: aquamarine;
-}
-.box-two {
-    background-color: pink;
+.phone-image {
+    display: flex;
+    justify-content: flex-end;
 }
 
-.box-three {
-    background-color: lightgreen;
-}
+/*footer section*/
 
 .footer {
     display: flex;
